
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int ERANGE ;
 int FALSE ;
 int TRUE ;
 int errno ;
 int maxExponent ;
 double* powersOf10 ;

double
js_strtod(const char *string, char **endPtr)
{
 int sign, expSign = FALSE;
 double fraction, dblExp, *d;
 register const char *p;
 register int c;


 int exp = 0;
 int fracExp = 0;


 int mantSize;


 int decPt;


 const char *pExp;





 p = string;
 while (*p == ' ' || *p == '\t' || *p == '\n' || *p == '\r') {
  p += 1;
 }
 if (*p == '-') {
  sign = TRUE;
  p += 1;
 } else {
  if (*p == '+') {
   p += 1;
  }
  sign = FALSE;
 }






 decPt = -1;
 for (mantSize = 0; ; mantSize += 1)
 {
  c = *p;
  if (!(c>='0'&&c<='9')) {
   if ((c != '.') || (decPt >= 0)) {
    break;
   }
   decPt = mantSize;
  }
  p += 1;
 }
 pExp = p;
 p -= mantSize;
 if (decPt < 0) {
  decPt = mantSize;
 } else {
  mantSize -= 1;
 }
 if (mantSize > 18) {
  fracExp = decPt - 18;
  mantSize = 18;
 } else {
  fracExp = decPt - mantSize;
 }
 if (mantSize == 0) {
  fraction = 0.0;
  p = string;
  goto done;
 } else {
  int frac1, frac2;
  frac1 = 0;
  for ( ; mantSize > 9; mantSize -= 1)
  {
   c = *p;
   p += 1;
   if (c == '.') {
    c = *p;
    p += 1;
   }
   frac1 = 10*frac1 + (c - '0');
  }
  frac2 = 0;
  for (; mantSize > 0; mantSize -= 1)
  {
   c = *p;
   p += 1;
   if (c == '.') {
    c = *p;
    p += 1;
   }
   frac2 = 10*frac2 + (c - '0');
  }
  fraction = (1.0e9 * frac1) + frac2;
 }





 p = pExp;
 if ((*p == 'E') || (*p == 'e')) {
  p += 1;
  if (*p == '-') {
   expSign = TRUE;
   p += 1;
  } else {
   if (*p == '+') {
    p += 1;
   }
   expSign = FALSE;
  }
  while ((*p >= '0') && (*p <= '9')) {
   exp = exp * 10 + (*p - '0');
   p += 1;
  }
 }
 if (expSign) {
  exp = fracExp - exp;
 } else {
  exp = fracExp + exp;
 }
 if (exp < -maxExponent) {
  exp = maxExponent;
  expSign = TRUE;
  errno = ERANGE;
 } else if (exp > maxExponent) {
  exp = maxExponent;
  expSign = FALSE;
  errno = ERANGE;
 } else if (exp < 0) {
  expSign = TRUE;
  exp = -exp;
 } else {
  expSign = FALSE;
 }
 dblExp = 1.0;
 for (d = powersOf10; exp != 0; exp >>= 1, d += 1) {
  if (exp & 01) {
   dblExp *= *d;
  }
 }
 if (expSign) {
  fraction /= dblExp;
 } else {
  fraction *= dblExp;
 }

done:
 if (endPtr != ((void*)0)) {
  *endPtr = (char *) p;
 }

 if (sign) {
  return -fraction;
 }
 return fraction;
}
